# pdf-poc

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/pubscale/pdf_poc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build-libjpeg.sh  disable-qpdf-tests.sh  native_qpdf.cpp  patch-qpdf-cmake.sh  qpdf_jni.cpp
app/src/main/cpp/jni/: qpdf_jni.cpp
app/src/main/cpp/libjpeg-turbo/arm64-v8a/include/: jerror.h
app/src/main/cpp/libjpeg-turbo/arm64-v8a/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets.cmake
app/src/main/cpp/libjpeg-turbo/arm64-v8a/lib/pkgconfig/: libjpeg.pc
app/src/main/cpp/libjpeg-turbo/arm64-v8a/share/doc/libjpeg-turbo/: tjcomp.c
app/src/main/cpp/libjpeg-turbo/armeabi-v7a/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets-release.cmake
app/src/main/cpp/libjpeg-turbo/armeabi-v7a/lib/pkgconfig/: libjpeg.pc
app/src/main/cpp/libjpeg-turbo/x86/include/: jmorecfg.h  jpeglib.h
app/src/main/cpp/libjpeg-turbo/x86/lib/pkgconfig/: libjpeg.pc
app/src/main/cpp/libjpeg-turbo/x86/share/doc/libjpeg-turbo/: example.c  tjdecomp.c
app/src/main/cpp/libjpeg-turbo/x86_64/lib/pkgconfig/: libjpeg.pc
app/src/main/cpp/libjpeg-turbo/x86_64/share/doc/libjpeg-turbo/: tjtran.c
app/src/main/cpp/qpdf/: CMakeLists.txt  CMakeLists.txt.bak
app/src/main/cpp/qpdf/libqpdf/: CMakeLists.txt
app/src/main/java/com/pubscale/pdf_poc/: FeatureProcessor.kt  FeatureProcessorFactory.kt  FeatureResult.kt  ImageToPdfProcessor.kt  MainActivity.kt  MainScreen.kt  PDFCompressoer.kt  PdfCompressionProcessor.kt  PdfFeature.kt  PdfToExcelProcessor.kt  PdfToImageProcessor.kt  PdfToPPtProcessor.kt  PdfToWordProcessor.kt  TextToPdfProcessor.kt
app/src/main/java/com/pubscale/pdf_poc/presentation/: PdfViewerScreen.kt  ProcessingOverlay.kt
app/src/main/java/com/pubscale/pdf_poc/presentation/merge/: MergePdfScreen.kt  MergePdfViewModel.kt
app/src/main/java/com/pubscale/pdf_poc/presentation/rearrange/: RearrangePdfScreen.kt
app/src/main/java/com/pubscale/pdf_poc/presentation/split/: SplitMode.kt  SplitPdfScreen.kt  SplitPdfViewModel.kt
app/src/main/java/com/pubscale/pdf_poc/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/pubscale/pdf_poc/utils/: EnhanceImage.kt  ExtractImages.kt  ExtractText.kt  ImageToPdfConverter.kt  PDFConvertor.kt  PdfToExcelConverter.kt  PdfToImageConverter.kt  PdfToPptConverter.kt  PdfViewerEditor.kt  QPdfHelper.kt  QPdfNative.kt  StringToPdfConverter.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_path.xml
app/src/test/java/com/pubscale/pdf_poc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
